# shopping-parser

./: Cargo.toml  README.md
src/: Makefile  data.rs  grammar.pest  lib.rs  main.rs  output.json  parser.rs  products.txt
tests/: parser_tests.rs
