[package]
name = "shopping-parser"
version = "0.1.0"
authors = ["Oleksandr Durdynets <o.durdynets@ukma.edu.ua>"]
description = "A console application to parse and structure shopping lists by categories and measurement units."
edition = "2021"

readme = "README.md"
repository = "https://github.com/ParZZ1vaLl/shopping-parser"
keywords = ["shopping", "parser", "CLI", "Rust"]
categories = ["text-processing", "command-line-utilities"]

[dependencies]
anyhow = "1.0.93"
pest = "2.7.14"
pest_derive = "2.7.14"
regex = "1"
thiserror = "1.0.68"

