[package]
name = "shopping-parser"
version = "0.1.1"
authors = ["Oleksandr Durdynets <o.durdynets@ukma.edu.ua>"]
description = "A Rust-based parser for parsing structured product information and shopping lists, supporting multiple currencies and units."
edition = "2021"
license = "MIT"

readme = "README.md"
repository = "https://github.com/ParZZ1vaLl/shopping-parser"
keywords = ["shopping", "parser", "CLI", "Rust"]
categories = ["text-processing", "command-line-utilities"]

[dependencies]
anyhow = "1.0.93"
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "2.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
